--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-webpack-project",
+  "name": "app",
   "version": "1.0.0",
   "description": "My webpack project",
   "main": "index.js",
