--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-plugin-chain": "^1.0.4",
-    "rimraf": "^3.0.2",
+    "fs-extra": "^10.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-standard": "^22.0.0"
